# forge

./: .gitignore  CMakeLists.txt  README.md
benchmark/: run_benchmark.sh
benchmark/axum/: run_server.sh
benchmark/axum/bench_server/: Cargo.toml
benchmark/axum/bench_server/src/: main.rs
benchmark/forge/: bench_server.fg
benchmark/phoenix/: run_server.sh
benchmark/phoenix/bench_server/: mix.exs
benchmark/phoenix/bench_server/config/: config.exs  runtime.exs
benchmark/phoenix/bench_server/lib/bench_server/: application.ex
benchmark/phoenix/bench_server/lib/bench_server_web/: endpoint.ex  router.ex
benchmark/phoenix/bench_server/lib/bench_server_web/controllers/: hello_controller.ex
benchmark/python/: server.py
bootstrap/: compiler.fg
cmake/: ForgeLibrary.cmake  HyloLibrary.cmake
compiler/: ast.c  ast.h  codegen.c  codegen.h  common.h  driver.c  driver.h  lexer.c  lexer.h  main.c  mod_registry.c  mod_registry.h  module_loader.c  module_loader.h  optimize.c  optimize.h  parser.c  parser.h  symbols.c  symbols.h
docs/: benchmark-performance-report.md  first.md  lsp.md  second.md
docs/examples/: README.md  control_flow.md  coroutines.md  device_io.md  event_echo.md  file_io.md  functions.md  hello.md  http_server.md  match.md  messages.md  ownership.md  pipe.md  stdlib_demo.md  supervisor.md  tcp_echo.md  udp_echo.md  use_library.md  use_module.md  web_server.md
docs/examples/modules/: mathutil.md
editors/vscode/: package-lock.json  package.json
editors/vscode/scripts/: bundle-server.mjs
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: forge.tmLanguage.json
examples/: control_flow.fg  coroutines.fg  device_io.fg  event_echo.fg  file_io.fg  functions.fg  gpu_demo.fg  hello.fg  hello.hy  http_server.fg  http_server.hy  match.fg  messages.fg  ownership.fg  pipe.fg  stdlib_demo.fg  stdlib_demo.hy  supervisor.fg  tcp_echo.hy  udp_echo.fg  use_library.fg  use_library.hy  use_module.fg  web_server.fg
examples/modules/: mathutil.fg
include/: forge_runtime.h  hylo_runtime.h
include/forge/: arena.h  event.h  fs.h  gpu.h  http.h  io.h  json.h  math.h  os.h  ownership.h  platform.h  string.h  tcp.h  thread.h  time.h  udp.h
include/hylo/: fs.h  http.h  io.h  json.h  math.h  os.h  string.h  tcp.h  time.h  udp.h
libs/greeting/: greeting.fg
libs/mathutil/: mathutil.hy
lsp/: package-lock.json  package.json  tsconfig.json
lsp/src/: completion.ts  constants.ts  forge.ts  server.ts
practice/: main.c
runtime/: arena.c  event_loop.c  ownership.c  platform.c  runtime.c  scheduler.c  thread.c  work_queue.c  work_queue.h
stdlib/: fs.c  gpu.c  http.c  io.c  json.c  math.c  os.c  string.c  tcp.c  time.c  udp.c
